@@ -5,8 +5,10 @@ import edu.ucsd.cse232b.expressions.relative.RelativePath;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Stack;
 import java.util.stream.Collectors;
 
 public class Slash implements ContextExp {
@@ -19,10 +21,10 @@ public class Slash implements ContextExp {
     }
 
     @Override
-    public List<Node> solve(Context c, Document doc) throws Exception {
+    public List<Node> solve(Stack<Context> c, Document doc) throws Exception {
         return ce.solve(c, doc).stream().map(node -> {
             try {
-                return child.solve(Collections.singletonList(node));
+                return child.solve(List.of(node));
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
