@@ -4,8 +4,9 @@ import edu.ucsd.cse232b.Context;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Stack;
 
 public class StrConst implements ContextExp {
     private final String str;
@@ -15,8 +16,8 @@ public class StrConst implements ContextExp {
     }
 
     @Override
-    public List<Node> solve(Context ctx, Document doc) throws Exception {
-        return Collections.singletonList(doc.createTextNode(this.str));
+    public List<Node> solve(Stack<Context> ctx, Document doc) throws Exception {
+        return List.of(doc.createTextNode(this.str));
     }
 
     @Override
